[gd_scene load_steps=4 format=3 uid="uid://fdntlakw1c1c"]

[ext_resource type="Script" path="res://Scenes/MainMenu/MainMenu.gd" id="1_6u0rg"]
[ext_resource type="PackedScene" uid="uid://ssi53sieinr7" path="res://Scenes/Obstacle Course 1.tscn" id="2_vg2j4"]
[ext_resource type="PackedScene" uid="uid://pg7jxvoujq3d" path="res://Scenes/FPSTest.tscn" id="3_oluek"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6u0rg")
obstacle_course_scene = ExtResource("2_vg2j4")
range_scene = ExtResource("3_oluek")

[node name="PlayButton" type="Button" parent="." groups=["Main"]]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 51.0
offset_bottom = 41.0
text = "Play"

[node name="Options" type="Button" parent="." groups=["Main"]]
layout_mode = 0
offset_left = 10.0
offset_top = 53.0
offset_right = 80.0
offset_bottom = 84.0
text = "Options"

[node name="Quit" type="Button" parent="." groups=["Main"]]
layout_mode = 0
offset_left = 10.0
offset_top = 95.0
offset_right = 52.0
offset_bottom = 126.0
text = "Quit"

[node name="ObstacleCourse" type="Button" parent="." groups=["PlayOptions"]]
visible = false
layout_mode = 0
offset_left = 140.0
offset_top = 53.0
offset_right = 274.0
offset_bottom = 84.0
text = "Obstacle Course"

[node name="Range" type="Button" parent="." groups=["PlayOptions"]]
visible = false
layout_mode = 0
offset_left = 140.0
offset_top = 10.0
offset_right = 196.0
offset_bottom = 41.0
text = "Range"

[node name="PauseBind" type="Button" parent="." groups=["KeyBinds", "SettingOptions"]]
visible = false
layout_mode = 0
offset_left = 310.0
offset_top = 10.0
offset_right = 404.0
offset_bottom = 41.0
toggle_mode = true
text = "Pause Bind"

[node name="GrappleBind" type="Button" parent="." groups=["KeyBinds", "SettingOptions"]]
visible = false
layout_mode = 0
offset_left = 311.0
offset_top = 52.0
offset_right = 420.0
offset_bottom = 83.0
text = "Grapple Bind"

[node name="BlastBind" type="Button" parent="." groups=["KeyBinds", "SettingOptions"]]
visible = false
layout_mode = 0
offset_left = 312.0
offset_top = 95.0
offset_right = 398.0
offset_bottom = 126.0
text = "Blast Bind"

[node name="ReelBind" type="Button" parent="." groups=["KeyBinds", "SettingOptions"]]
visible = false
layout_mode = 0
offset_left = 314.0
offset_top = 134.0
offset_right = 395.0
offset_bottom = 165.0
text = "Reel Bind"

[node name="PlayerCountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 319.0
offset_right = 72.0
offset_bottom = 345.0
text = "Players: "

[node name="PlayerCounter" type="Label" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 319.0
offset_right = 113.0
offset_bottom = 345.0
text = "1"

[node name="IPEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 238.0
offset_right = 164.0
offset_bottom = 275.0
text = "127.0.0.1"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 282.0
offset_right = 113.0
offset_bottom = 313.0
text = "Join"

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 282.0
offset_right = 47.0
offset_bottom = 313.0
text = "Host"

[node name="NameEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 207.0
offset_right = 163.0
offset_bottom = 236.0
text = "Name:"

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="ObstacleCourse" to="." method="_on_obstacle_course_button_down"]
[connection signal="button_down" from="Range" to="." method="_on_range_button_down"]
[connection signal="button_down" from="PauseBind" to="." method="_on_pause_bind_button_down"]
[connection signal="button_down" from="GrappleBind" to="." method="_on_grapple_bind_button_down"]
[connection signal="button_down" from="BlastBind" to="." method="_on_blast_bind_button_down"]
[connection signal="button_down" from="ReelBind" to="." method="_on_reel_bind_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
